<resources>
    <string name="app_name">FX45</string>
    <string name="forty_five">45</string>
    <string name="ok">Ok</string>
    <string name="weather_error">There was an error while fetching weather, please try again</string>
    <string name="location_error">Location Error</string>
    <string name="unable_to_get_location">We were unable to get your current location</string>
    <string name="location_retrieve_error">Error retrieving location</string>
    <string name="permission_denied">To use this app u need %1$s Please go to settings and enable it</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="try_again">Try again</string>
    <string name="exit">Exit</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="google_play_error">Google play error</string>
    <string name="google_play_error_message">You do not have google play on your device and therefore cannot use this app</string>
    <string name="no_play_services">Please ensure that Google play services are active on your phone</string>
    <string name="gps_error_message">Please enable your GPS and try again</string>
    <string name="gps_error_title">GPS Error</string>
    <string name="add_report">Add report</string>
    <string name="internet_error">Internet error</string>
    <string name="from_convert_error">Add currency to convert from</string>
    <string name="to_convert_error">Add currency to convert to</string>
    <string name="amount_convert_error">Add convertion amount</string>
    <string name="convert_response_error">Sorry an error occurred</string>
    <string name="convert_error">Please Add the currency you want to convert to</string>
    <string name="internet_error_message">Please check your internet connection and try again</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="convert">Convert</string>
    <string name="convert_currencies">Convert currencies</string>
    <string name="no_popular_currency_pairs">No popular currency pairs found</string>
    <string name="no_data_found">Sorry no data was found</string>
    <string name="unknown_error">Unknown error</string>
    <string name="requested_currency_pairs">Requested currency pairs (%1$d)</string>
    <string name="no_requested_pairs">Please request currency pairs history</string>
    <string name="add">Add</string>
    <string name="view_trade_history">View trade history</string>
    <string name="please_select_a_none_weekend_date">Please select a none weekend date</string>
    <string name="please_set_time">Please set time</string>
    <string name="select_from_popular_trading_pairs">Select from popular trading pairs</string>
    <string name="select_currencies_and_create_a_trading_pair">Create a trading pair and add it to your list </string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="select">Select</string>
    <string name="retry">Retry</string>
    <string name="trade_history">Trade history</string>
    <string name="request_trade_history">Request trade history</string>
    <string name="set_date">Set date</string>
    <string name="done">Done</string>
    <string name="set_time">Set time</string>
    <string name="no_content_found_for_your_current_search">No content found for your current search</string>
    <string name="added_pair">%1$s added</string>
</resources>